# smtp-cli

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: dns.h  email.h  smtp.h  utils.h
src/: dns.c  email.c  email.h  main.c  main.h  smtp.c  utils.c
